<resources>
    <string name="app_name">Currency Converter</string>
    <string name="UpdatingRates">Updating Rates</string>
    <string name="LastUpdate">Last update: </string>
    <string name="LoadingFailed">Rates loading Failed</string>
    <string name="CheckConnection">Check Your internet connection and refresh</string>
    <string name="Connection104">Updating rates was unsucessful. Try again later.</string>
    <string name="Rate">Rate app</string>
    <string name="Info">Info</string>
    <string name="Privacy">Privacy</string>
    <string name="Share">Share</string>
    <string name="PrivacyPolicy"><a href="https://docs.google.com/document/d/1fVCdU1wN4IBz-u3tfrVLy1r_YbL9B1eVFYE6O76w2v0/edit?usp=sharing">Privacy Policy</a></string>
    <string name="MyCurrency">Exchange Rates</string>
    <string name="NoticeBold">Notice</string>
    <string name="Search">Search</string>
    <string name="Notice">The exchange rates presented here are informational only. Data are provided by FixerApi and refreshed once every 1 hour. Rates can change at any time and we cannot guarantee their accuracy.\n\nBefore any exchange transaction you should always check official rates at the place of the transaction.\nWe accept no responsibility for any losses incurred as a result of information read in this app.</string>

    <string name="banner_ad_unit_id">ca-app-pub-5209961561922052/2707233821</string>
    <!--Test Baner ADD-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->


</resources>